--- a/server/server.csproj
+++ b/server/server.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="WTelegramClient" Version="3.6.6" />
+  </ItemGroup>
+
 </Project>
