--- a/server/server.csproj
+++ b/server/server.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PusherServer" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
