--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/pusher-js": "^5.1.0",
     "bootstrap": "^5.3.3",
     "next": "14.1.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18"
   },
   "devDependencies": {
