--- a/server/server.csproj
+++ b/server/server.csproj
@@ -9,7 +9,10 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="WTelegramClient" Version="3.6.6" />
+    <PackageReference Include="VkNet" Version="1.76.0" />
+    <PackageReference Include="VkNet.AudioBypassService" Version="1.7.6" />
+    <PackageReference Include="VkNet.NLog.Extensions.Logging" Version="1.3.3" />
+    <PackageReference Include="WTelegramClient" Version="3.7.2" />
   </ItemGroup>
 
 </Project>
