--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
+    "firebase": "^10.12.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.5",
+    "timeago.js": "^4.0.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
